--- a/example/index.html
+++ b/example/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>js-sdk-test</title>
+    <title>js-sdk-init</title>
   </head>
   <body>
     <script src="./../dist/index.js"></script>
